# extinctCoder

./: .gitignore  .web.yml  CLAUDE.md  LICENSE  Makefile  Pipfile  README.md  Readme.md  Readme2.md  USAGE.md  extra.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  resume.schema.json  resume.yml  stack.yml
.github/: dependabot.yml
.github/workflows/: blog-post-workflow.yml  latest_blogs.yml  latex.yml  oss_contributions.yml  profile-3d.yml  profile-stack.yml  readme_projects.yml  resume.yml  resume_builder.yml  tests.yml  update-readme.yml
ai/: ec_logo.ai
latex/: education.tex  experience.tex  heading.tex  projects.tex  skills.tex
readme/: __main__.py  logger.py  oss.py
resume/: resume.schema.json  resume.yml
resume/builder/: __main__.py  compiler.py  logger.py  sha.py
resume/templates/: edu_projects.tex  education.tex  heading.tex  resume.tex  skills.tex
scripts/: compiler.py  log_x.py  main.py  utils.py
site/: config.toml
site/content/project/: title.md  xcvzxcvzxcv.md
site/layouts/partials/: nav.html
site/static/admin/: config.yml
src/js/: cms.js
src/js/cms-preview-templates/: project.js
templates/: commands.tex  experience.tex  projects.tex
tests/: test_cli.py  test_compiler.py  test_oss.py  test_readme.py  test_schema.py
